<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bitfields</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="helpmain">Use menu to add new bit fields, long press to delete a bit field</string>
    <string name="helpsections">Use menu to add new sections or edit the fields name</string>
    <string name="helpsections2">Use long press to edit a section</string>
    <string name="invalidsection">Invalid start / end values</string>
    <string name="binaryInput">Binary input</string>
    <string name="hexInput">Hex input</string>
    <string name="decimalInput">Decimal input</string>
    <string name="title_activity_bit_field_details">BitFieldDetails</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="field_values">Field Values</string>
    <string name="overall_value">Overall Value</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_bit_left">Add Bit Left</string>
    <string name="add_bit_right">Add Bit Right</string>
    <string name="add_field_section">Add Field Section</string>
</resources>
